[bug 883316] Fix Subpage Spacing

--- a/public/css/ui.less
+++ b/public/css/ui.less
@@ -56,7 +56,6 @@
   margin-bottom: @gutter * @unit;
   .clearfix;
   display: block;
-  padding: 50px 0;
 
   hr { 
     margin: 20px 0;
@@ -136,7 +135,7 @@
 }
 
 .ui-section {
-  padding-top: @gutter * @unit;
+  padding-top: @gutter * 2 * @unit;
   padding-bottom: @gutter * 2 * @unit;
   .padleft(1);
   .padright(1);
